[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/AppearanceMenu.gd" type="Script" id=1]

[node name="AppearenceMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 64.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 240.0
margin_bottom = 14.0
text = "HATS"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 240.0
margin_bottom = 134.0

[node name="Hats Buttons" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 102.0
margin_bottom = 116.0

[node name="Crown" type="Button" parent="Panel/VBoxContainer/HBoxContainer/Hats Buttons"]
margin_right = 102.0
margin_bottom = 20.0
text = "Crown"

[node name="DemonCrown" type="Button" parent="Panel/VBoxContainer/HBoxContainer/Hats Buttons"]
margin_top = 24.0
margin_right = 102.0
margin_bottom = 44.0
text = "Demon Crown"

[node name="PiratesHat" type="Button" parent="Panel/VBoxContainer/HBoxContainer/Hats Buttons"]
margin_top = 48.0
margin_right = 102.0
margin_bottom = 68.0
text = "Pirates Hat"

[node name="TopHat" type="Button" parent="Panel/VBoxContainer/HBoxContainer/Hats Buttons"]
margin_top = 72.0
margin_right = 102.0
margin_bottom = 92.0
text = "Top Hat"

[node name="VikingHat" type="Button" parent="Panel/VBoxContainer/HBoxContainer/Hats Buttons"]
margin_top = 96.0
margin_right = 102.0
margin_bottom = 116.0
text = "Viking Hat"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 216.0
margin_bottom = 116.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 116.0

[node name="White" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 53.0
margin_bottom = 20.0
text = "White"

[node name="Black" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 53.0
margin_bottom = 44.0
text = "Black"

[node name="Green" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 53.0
margin_bottom = 68.0
text = "Green"

[node name="Purple" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 53.0
margin_bottom = 92.0
text = "Purple"

[node name="Blue" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 53.0
margin_bottom = 116.0
text = "Blue"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 110.0
margin_bottom = 116.0

[node name="Red" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 53.0
margin_bottom = 20.0
text = "Red"

[node name="Yellow" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 53.0
margin_bottom = 44.0
text = "Yellow"

[node name="Brown" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 53.0
margin_bottom = 68.0
text = "Brown"

[node name="Teal" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 53.0
margin_bottom = 92.0
text = "Teal"

[node name="Null" type="Button" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 96.0
margin_right = 53.0
margin_bottom = 116.0
text = "Null"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 240.0
margin_bottom = 116.0

[node name="Exit" type="Button" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
text = "X"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Hats Buttons/Crown" to="." method="_on_Crown_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Hats Buttons/DemonCrown" to="." method="_on_DemonCrown_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Hats Buttons/PiratesHat" to="." method="_on_PiratesHat_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Hats Buttons/TopHat" to="." method="_on_TopHat_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Hats Buttons/VikingHat" to="." method="_on_VikingHat_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/Black" to="." method="_on_Black_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/Purple" to="." method="_on_Purple_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2/Brown" to="." method="_on_Brown_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer2/Teal" to="." method="_on_Teal_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Exit" to="." method="_on_Exit_pressed"]
